--- a/Multicollinearity/VIF, CI, and VD Entropy Variables.ipynb
+++ b/Multicollinearity/VIF, CI, and VD Entropy Variables.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8da1e4a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -16,12 +25,12 @@
    "id": "39ad4fd8",
    "metadata": {},
    "source": [
-    "# Assessing Multicollinearity | All Variables"
+    "# Assessing Multicollinearity | Entropy Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "44947076",
    "metadata": {},
    "outputs": [],
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "09f0a77b",
    "metadata": {},
    "outputs": [
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5c7999d2",
    "metadata": {},
    "outputs": [],
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 12,
    "id": "8ab9d9ba",
    "metadata": {},
    "outputs": [],
@@ -178,6 +187,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d79d98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'WFFORM', 'RHOSTAR', 'DWDIA', 'BETASTAR', 'POHM', 'NEL', 'NUSTAR', and 'PLTH'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a09d14eb",
    "metadata": {},
@@ -187,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 13,
    "id": "16c08392",
    "metadata": {},
    "outputs": [],
@@ -207,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 14,
    "id": "be215c8a",
    "metadata": {},
    "outputs": [
@@ -226,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 15,
    "id": "90d6be49",
    "metadata": {},
    "outputs": [
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 16,
    "id": "06c3c471",
    "metadata": {},
    "outputs": [],
@@ -299,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 17,
    "id": "a6566f7d",
    "metadata": {},
    "outputs": [
@@ -333,6 +352,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "360202d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "995cd3a3",
    "metadata": {},
    "outputs": [],
    "source": []
