--- a/Classification/Sklearn Tuning/Best Model.ipynb
+++ b/Classification/Sklearn Tuning/Best Model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ecb18d49",
+   "id": "4c739481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8db01ac",
+   "id": "5530c528",
    "metadata": {},
    "source": [
     "## BEST MODEL "
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0363dec7",
+   "id": "e5fa0260",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5844823e",
+   "id": "55eb11a4",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8b3b3e65",
+   "id": "4d7b6c6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6eb06b61",
+   "id": "81d97820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "db98c372",
+   "id": "75429ae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4c2a8138",
+   "id": "b91c5e63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "75821f3e",
+   "id": "42acfbad",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1cbc62b7",
+   "id": "14b6dc42",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a4c1e7",
+   "id": "e95a9d4d",
    "metadata": {},
    "source": [
     "## PERMUTATION IMPORTANCE"
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2af4fdac",
+   "id": "ceab4456",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "72067989",
+   "id": "16a27c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5e76f989",
+   "id": "5fe4b1f7",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1315e570",
+   "id": "db009774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6a2c5f67",
+   "id": "0835f0f7",
    "metadata": {},
    "outputs": [
     {
@@ -397,8 +397,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "e6027f95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['RHOSTAR', 'NUSTAR', 'Q95', 'BETASTAR', 'BEIMHD'], dtype='object')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Importance[:5].index"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3634f53f",
+   "id": "7716484d",
    "metadata": {},
    "outputs": [],
    "source": []
