--- a/Tokamak Interpretation/Creating Gif.ipynb
+++ b/Tokamak Interpretation/Creating Gif.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8975f698",
+   "execution_count": null,
+   "id": "6d6ef27c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aae237be",
+   "execution_count": null,
+   "id": "b27ef4f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,15 @@
     "import tokamakTK\n",
     "from tokamakTK import get_ECT_regression, HUEOrder, get_pi_matrix, clean_numerical_data, MyCounter\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "from PIL import Image\n",
+    "#import imageio\n",
+    "import imageio.v2 as imageio\n",
+    "\n",
+    "from PIL import Image\n",
+    "import os\n",
     "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -48,33 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "657ad620",
+   "execution_count": null,
+   "id": "7f7f3b44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Subset that decrease alpha-R to 0.6357\n",
-      "--------\n",
-      "23.45% affected alpha_R\n",
-      "76.55% did not affect alpha_R\n",
-      "\n",
-      "\n",
-      "  Subset that decrease alpha-R to 0.9998\n",
-      "--------\n",
-      "9.88% affected alpha_R\n",
-      "90.12% did not affect alpha_R\n",
-      "\n",
-      "\n",
-      "  Subset given by Joseph Hall           \n",
-      "--------\n",
-      "18.46% affected alpha_R\n",
-      "81.54% did not affect alpha_R\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Obtained from Optimization\n",
     "\n",
@@ -123,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ae9a6d52",
+   "execution_count": null,
+   "id": "16cd334c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "amount = 20\n",
+    "amount = 750\n",
     "small_dataset = pd.read_csv(path+\"decreased_dataset_random_sampling_500_decreasing_points.csv\")\n",
     "samples = [f\"subset_{int(i)}\" for i in np.linspace(1,len(small_dataset.columns)-1,amount)]\n",
     "values = small_dataset[samples].describe().loc[\"min\"]\n",
@@ -143,18 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a2c84fef",
+   "execution_count": null,
+   "id": "297f948b",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB5_decreas_pts = pd.read_csv(path+\"decreasing_dataset_info.csv\")\n",
     "# Sampling on the decreasing points of the decreasing DS\n",
-    "# If sampling is on \"decreased\": sampling on decreasing points in decreasing dataset (smaller alpha_R)\n",
-    "# If sampling is on \"weights\": sampling on complete dataset only (highers alpha_R)\n",
-    "IDs = [0]*amount\n",
-    "for i in range(amount):\n",
-    "    IDs[i] = DB5_decreas_pts.sample(n=info[\"sampling\"][i], weights='decreased', random_state=info[\"seed\"][i])\n",
+    "#    If sampling is on \"decreased\": sampling on decreasing points in decreasing dataset (smaller alpha_R)\n",
+    "#    If sampling is on \"weights\": sampling on complete dataset only (highers alpha_R)\n",
+    "IDs = [\n",
+    "    DB5_decreas_pts.sample(n=info[\"sampling\"][i], \n",
+    "                           weights='decreased', \n",
+    "                           random_state=info[\"seed\"][i]) for i in range(amount)\n",
+    "]\n",
     "    \n",
     "# Adding mine with alpha_R of approx 0.63\n",
     "IDs = IDs + [min_subset_ids_6357]"
@@ -162,59 +150,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4992afe7",
+   "execution_count": null,
+   "id": "4611ddfd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF = [DB5[DB5.id.isin(IDs[i].id.values) | DB5.id.isin(DB2.id.values)][coeffs+[\"TAUTH\"]] for i in range(amount+1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b4f7a123",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2.193381295547305,\n",
-       " 1.8413459046650524,\n",
-       " 1.6257035103070592,\n",
-       " 1.4502291354609658,\n",
-       " 1.3319700443067546,\n",
-       " 1.2232065794708968,\n",
-       " 1.1429833582859634,\n",
-       " 1.0635431828948825,\n",
-       " 0.9926216010787007,\n",
-       " 0.9408375289922396,\n",
-       " 0.8907058348274953,\n",
-       " 0.8433327529157967,\n",
-       " 0.8141162063836194,\n",
-       " 0.7765526617447575,\n",
-       " 0.7319295717685702,\n",
-       " 0.7082993866348661,\n",
-       " 0.6815782756548103,\n",
-       " 0.6617309392275936,\n",
-       " 0.6515977868422362,\n",
-       " 0.6558006008429011,\n",
-       " 0.6357571952782841]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[get_ECT_regression(DF[i]).params[\"RGEO\"] for i in range(len(DF))]"
+    "# Also serves as sanity check\n",
+    "# ----------------------------------------\n",
+    "DF = [DB5[DB5.id.isin(IDs[i].id.values) | DB5.id.isin(DB2.id.values)] for i in range(amount+1)]\n",
+    "ALPHAs = [get_ECT_regression(DF[i]).params[\"RGEO\"] for i in range(len(DF))]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7b7075",
+   "id": "450c90c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_3D_plot_DB5(i, indxs, saveFig = False, file_name=\"\"):\n",
+    "    # Create a figure and a 3D axis\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    alpha = np.round(ALPHAs[i],2)\n",
+    "\n",
+    "    x,y,z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
+    "    DB5[\"colors\"] = [\"black\"]*len(DB5)\n",
+    "    DB5.loc[(DB5[DB5.id.isin(indxs.id.values)].index), \"colors\"] = \"red\"\n",
+    "\n",
+    "    # Plot the data points\n",
+    "    ax.scatter(DB5[x], DB5[y], DB5[z], c=DB5[\"colors\"].values)\n",
+    "    ax.set_xlabel(x, fontsize=15, labelpad=10)\n",
+    "    ax.set_ylabel(y, fontsize=15, labelpad=10)\n",
+    "    ax.set_zlabel(z, rotation=90, fontsize=15)  # Increase the labelpad to make it more visible\n",
+    "\n",
+    "    ax.tick_params(axis='x', labelsize=12)  # x-axis ticks\n",
+    "    ax.tick_params(axis='y', labelsize=12)  # y-axis ticks\n",
+    "    ax.tick_params(axis='z', labelsize=12)  # z-axis ticks\n",
+    "\n",
+    "    fig.set_size_inches(16,13) \n",
+    "    ax.view_init(elev=25, azim=23) \n",
+    "    \n",
+    "    ax.text(4.3, 0, 18, 'Decreasing', color='red', fontsize=20)\n",
+    "    ax.text(4.3, 0, 17, 'Unaffected', color='black', fontsize=20)\n",
+    "    ax.text(4.35, 0, 19.3, f\"$\\\\alpha_R \\\\sim$ {alpha}\", color='black', fontsize=25)\n",
+    "    \n",
+    "    if saveFig:\n",
+    "        plt.savefig(path+file_name)\n",
+    "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83c91491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get_3D_plot_DB5(300, IDs[300])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "149f6d96",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i, indxs in enumerate(IDs):\n",
+    "    file_name = f\"GIF_images/image_{i}.png\"\n",
+    "    get_3D_plot_DB5(i, indxs, True, file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "433322dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# HEAVY GIF (amount = 750)\n",
+    "x,y,z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
+    "\n",
+    "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
+    "output_file = f'change_in_{x}_{y}_{z}.gif'  # Output file name\n",
+    "\n",
+    "# Get a list of PNG files in the folder\n",
+    "image_files = [os.path.join(image_folder, file) for file in os.listdir(image_folder) if file.endswith('.png')]\n",
+    "# Sort the image files by their numerical values in the filenames\n",
+    "image_files.sort(key=lambda x: int(os.path.splitext(os.path.basename(x))[0].split('_')[-1]))\n",
+    "\n",
+    "# Save the images in the folder as an animated GIF\n",
+    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb0a1da8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -222,15 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36092acd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09c8e040",
+   "id": "fd1ab9f1",
    "metadata": {},
    "outputs": [],
    "source": []
