--- a/Tokamak Interpretation/Creating Gif.ipynb
+++ b/Tokamak Interpretation/Creating Gif.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6d6ef27c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b27ef4f0",
    "metadata": {},
    "outputs": [],
@@ -57,10 +57,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7f7f3b44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Subset that decrease alpha-R to 0.6357\n",
+      "--------\n",
+      "23.45% affected alpha_R\n",
+      "76.55% did not affect alpha_R\n",
+      "\n",
+      "\n",
+      "  Subset that decrease alpha-R to 0.9998\n",
+      "--------\n",
+      "9.88% affected alpha_R\n",
+      "90.12% did not affect alpha_R\n",
+      "\n",
+      "\n",
+      "  Subset given by Joseph Hall           \n",
+      "--------\n",
+      "18.46% affected alpha_R\n",
+      "81.54% did not affect alpha_R\n"
+     ]
+    }
+   ],
    "source": [
     "# Obtained from Optimization\n",
     "\n",
@@ -109,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "16cd334c",
    "metadata": {},
    "outputs": [],
@@ -129,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "297f948b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4611ddfd",
    "metadata": {},
    "outputs": [],
@@ -163,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "450c90c3",
    "metadata": {},
    "outputs": [],
@@ -188,7 +211,7 @@
     "    ax.tick_params(axis='y', labelsize=12)  # y-axis ticks\n",
     "    ax.tick_params(axis='z', labelsize=12)  # z-axis ticks\n",
     "\n",
-    "    fig.set_size_inches(16,13) \n",
+    "    #fig.set_size_inches(16,13) \n",
     "    ax.view_init(elev=25, azim=23) \n",
     "    \n",
     "    ax.text(4.3, 0, 18, 'Decreasing', color='red', fontsize=20)\n",
@@ -202,12 +225,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "83c91491",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get_3D_plot_DB5(300, IDs[300])"
+    "get_3D_plot_DB5(300, IDs[300], True, file_name=\"GIF_images/test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "615b0ba8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xxxxxxxxxxxxx' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mxxxxxxxxxxxxx\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'xxxxxxxxxxxxx' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "xxxxxxxxxxxxx"
    ]
   },
   {
