--- a/Tokamak Interpretation/GIF/RHO_NUSTAR_Q95.ipynb
+++ b/Tokamak Interpretation/GIF/RHO_NUSTAR_Q95.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "b27ef4f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append('../../')\n",
     "import tokamakTK\n",
     "from tokamakTK import get_ECT_regression, HUEOrder, get_pi_matrix, clean_numerical_data, MyCounter\n",
     "\n",
@@ -29,7 +29,7 @@
     "from PIL import Image\n",
     "#import imageio\n",
     "import imageio.v2 as imageio\n",
-    "\n",
+    "from matplotlib.lines import Line2D\n",
     "from PIL import Image\n",
     "import os\n",
     "import numpy as np \n",
@@ -49,15 +49,15 @@
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "plt.rc('font',family = 'serif')\n",
-    "path = \"../data/\"\n",
-    "fig_path = \"../../../LATEX/Latex Images/\"\n",
+    "path = \"../../data/\"\n",
+    "fig_path = \"../../../../LATEX/Latex Images/\"\n",
     "\n",
     "coeffs = ['IP', 'BT', 'NEL', 'PLTH', 'RGEO', 'KAREA', 'EPS', 'MEFF']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "7f7f3b44",
    "metadata": {},
    "outputs": [
@@ -127,22 +127,25 @@
     "    \"\\n\\n\\n  Subset given by Joseph Hall           \\n--------\\n\" +\n",
     "    f\"{ round( (len(min_subset_ids_joe)/len(DB5))*100     ,2)  }% affected alpha_R\\n\" + \n",
     "    f\"{ round( (1 - len(min_subset_ids_joe)/len(DB5))*100 ,2)  }% did not affect alpha_R\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "DB5 = tokamakTK.clean_categorical_data(DB5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "16cd334c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "amount = 750\n",
+    "# amount: images that the gif will contain\n",
+    "amount = 150\n",
+    "\n",
     "small_dataset = pd.read_csv(path+\"decreased_dataset_random_sampling_500_decreasing_points.csv\")\n",
     "samples = [f\"subset_{int(i)}\" for i in np.linspace(1,len(small_dataset.columns)-1,amount)]\n",
     "values = small_dataset[samples].describe().loc[\"min\"]\n",
     "indxs = [small_dataset[small_dataset[values.keys()[i]].isin([values.values[i]])].index[0] for i in range(amount)]\n",
-    "\n",
     "\n",
     "info = pd.DataFrame([np.linspace(1,len(small_dataset.columns)-1,amount),small_dataset.loc[indxs][\"seed\"].values]).T\n",
     "info = info.rename(columns={0:\"sampling\", 1:\"seed\"})\n",
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "297f948b",
    "metadata": {},
    "outputs": [],
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "4611ddfd",
    "metadata": {},
    "outputs": [],
@@ -186,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "450c90c3",
+   "execution_count": 37,
+   "id": "88e98b64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_3D_plot_DB5(i, indxs, saveFig = False, file_name=\"\"):\n",
+    "def get_3D_gif_DB5(i, indxs, saveFig = False, file_name=\"\"):\n",
     "    # Create a figure and a 3D axis\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot(111, projection='3d')\n",
@@ -203,56 +206,84 @@
     "\n",
     "    # Plot the data points\n",
     "    ax.scatter(DB5[x], DB5[y], DB5[z], c=DB5[\"colors\"].values)\n",
-    "    ax.set_xlabel(x, fontsize=15, labelpad=10)\n",
-    "    ax.set_ylabel(y, fontsize=15, labelpad=10)\n",
-    "    ax.set_zlabel(z, rotation=90, fontsize=15)  # Increase the labelpad to make it more visible\n",
+    "    ax.set_xlabel(x, fontsize=12, labelpad=10)\n",
+    "    ax.set_ylabel(y, fontsize=12, labelpad=10)\n",
+    "    ax.set_zlabel(z, fontsize=12, rotation=0)  \n",
+    "    ax.tick_params(axis='x', labelsize=12)\n",
+    "    ax.tick_params(axis='y', labelsize=12)\n",
+    "    ax.tick_params(axis='z', labelsize=12)\n",
     "\n",
-    "    ax.tick_params(axis='x', labelsize=12)  # x-axis ticks\n",
-    "    ax.tick_params(axis='y', labelsize=12)  # y-axis ticks\n",
-    "    ax.tick_params(axis='z', labelsize=12)  # z-axis ticks\n",
-    "\n",
-    "    #fig.set_size_inches(16,13) \n",
     "    ax.view_init(elev=25, azim=23) \n",
     "    \n",
-    "    ax.text(4.3, 0, 18, 'Decreasing', color='red', fontsize=20)\n",
-    "    ax.text(4.3, 0, 17, 'Unaffected', color='black', fontsize=20)\n",
-    "    ax.text(4.35, 0, 19.3, f\"$\\\\alpha_R \\\\sim$ {alpha}\", color='black', fontsize=25)\n",
+    "    ax.text(4.3, 0, 18, 'Decreasing', color='red', fontsize=15)\n",
+    "    ax.text(4.3, 0, 17, 'Unaffected', color='black', fontsize=15)\n",
+    "    ax.text(4.29, 0, 19.3, f\"$\\\\alpha_R \\\\sim$ {alpha}\", color='black', fontsize=17)\n",
     "    \n",
     "    if saveFig:\n",
+    "        plt.tight_layout()\n",
     "        plt.savefig(path+file_name)\n",
     "        plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "83c91491",
+   "execution_count": 38,
+   "id": "450c90c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_3D_plot_DB5(300, IDs[300], True, file_name=\"GIF_images/test\")"
+    "def get_3D_plot_DB5_TOK(i, indxs, saveFig = False, file_name=\"\"):\n",
+    "    # Create a figure and a 3D axis\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    alpha = np.round(ALPHAs[i],2)\n",
+    "    \n",
+    "    HUE_ORDER, PX_ORDER = tokamakTK.get_colors_per_category(DB5)\n",
+    "    category_colors = HUE_ORDER[\"TOK\"]\n",
+    "\n",
+    "    x,y,z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
+    "    DB5[\"colors\"] = DB5[\"TOK\"].map(category_colors)\n",
+    "\n",
+    "    # Plot the data points\n",
+    "    scatter = ax.scatter(DB5[x], DB5[y], DB5[z], c=DB5[\"colors\"].values)\n",
+    "    ax.set_xlabel(x, fontsize=12, labelpad=10)\n",
+    "    ax.set_ylabel(y, fontsize=12, labelpad=10)\n",
+    "    ax.set_zlabel(z, fontsize=12, rotation=0)  # Increase the labelpad to make it more visible\n",
+    "    \n",
+    "    # Add a legend\n",
+    "    legend_elements = []\n",
+    "    for category, color in category_colors.items():\n",
+    "        legend_elements.append(plt.Line2D([0], [0], marker='o', \n",
+    "                                          color='w', label=category, markerfacecolor=color, markersize=7))\n",
+    "\n",
+    "    legend = ax.legend(handles=legend_elements, frameon=False,\n",
+    "                       loc='upper right', bbox_to_anchor=(1.2, 0.9), fontsize=8)\n",
+    "\n",
+    "\n",
+    "    ax.tick_params(axis='x', labelsize=12)  # x-axis ticks\n",
+    "    ax.tick_params(axis='y', labelsize=12)  # y-axis ticks\n",
+    "    ax.tick_params(axis='z', labelsize=12)  # z-axis ticks\n",
+    "\n",
+    "    #fig.set_size_inches(16,13) \n",
+    "    ax.view_init(elev=25, azim=23)\n",
+    "\n",
+    "    \n",
+    "    if saveFig:\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(path+file_name, format=\"pdf\", dpi=800)\n",
+    "        #plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "615b0ba8",
+   "execution_count": 40,
+   "id": "83c91491",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'xxxxxxxxxxxxx' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mxxxxxxxxxxxxx\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'xxxxxxxxxxxxx' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "xxxxxxxxxxxxx"
+    "# EMEMBER TO DELETE THE test.png\n",
+    "#get_3D_plot_DB5_TOK(15, IDs[15], True, \"TOK/3D_NUSTAR_RHOSTAR_Q95\")\n",
+    "#get_3D_gif_DB5(15, IDs[15], True, \"test\")"
    ]
   },
   {
@@ -266,7 +297,7 @@
    "source": [
     "for i, indxs in enumerate(IDs):\n",
     "    file_name = f\"GIF_images/image_{i}.png\"\n",
-    "    get_3D_plot_DB5(i, indxs, True, file_name)"
+    "    get_3D_gif_DB5(i, indxs, True, file_name)"
    ]
   },
   {
@@ -288,7 +319,7 @@
     "image_files.sort(key=lambda x: int(os.path.splitext(os.path.basename(x))[0].split('_')[-1]))\n",
     "\n",
     "# Save the images in the folder as an animated GIF\n",
-    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=25)"
+    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=5)"
    ]
   },
   {
@@ -303,6 +334,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd1ab9f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34f04114",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "069d562b",
    "metadata": {},
    "outputs": [],
    "source": []
