--- a/Tokamak Interpretation/GIF/BETASTAR_RHO_NUSTAR.ipynb
+++ b/Tokamak Interpretation/GIF/BETASTAR_RHO_NUSTAR.ipynb
@@ -304,7 +304,7 @@
    ],
    "source": [
     "# EMEMBER TO DELETE THE test.png\n",
-    "#get_3D_plot_DB5_TOK(DB5, 15, IDs[15], True, \"TOK/3D_BETASTAR_NUSTAR_RHOSTAR\")\n",
+    "get_3D_plot_DB5_TOK(DB5, 15, IDs[15], True, \"TOK/3D_BETASTAR_NUSTAR_RHOSTAR.png\")\n",
     "#get_3D_gif_DB5(DB5, 15, min_subset_ids_joe, True, \"test\", removeSPH=True)"
    ]
   },
